# latex

./: BUILD  MODULE.bazel  README.md
latex/: BUILD  git_stamp.bzl  latex.bzl  ref_test.bzl  repo.bzl  role_call_test.bzl  spelling.tex
tests/: BUILD  detex_test.bzl  git_stamp_test.bzl  latex_ref_test_test.bzl  role_call_test_test.bzl  tex_to_pdf_test.bzl
